# DjangoX

./: pyproject.toml
anime_lover/: apps.py  models.py  tests.py  urls.py  views.py
anime_lover/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/anime/: anime_create.html  anime_delete.html  anime_detail.html  anime_list.html  anime_update.html
