[tool.poetry]
name = "djangox"
version = "0.1.0"
description = ""
authors = ["ManarAbdelkarim <manarbdelkarim434@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
whitenoise = "^5.2.0"
django-debug-toolbar = "^3.2.1"
django-crispy-forms = "^1.12.0"
django-allauth = "^0.44.0"
Django = "^3.2.4"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
